# Interpol

./: CMakeLists.txt
src/: Interpol.cpp  Window.hpp  lagrange.hpp  piecewise.hpp  someFunc.hpp  test.cpp
